

- Refactor attack declarations -
The game now correctly calculates whether an attack declaration is legal, based upon the restrictions and requirements present on the possible attacking creatures. AI support is not yet fully implemented, but the AI can always default to a legal attack declaration.


---------
New Cards
---------

AEther Gale
Angel of the Dire Hour
Angelic Field Marshal
Breaching Leviathan
Commander's Sphere
Containment Priest
Creeperhulk
Daretti, Scrap Savant
Demon of Wailing Agonies
Deploy to the Front
Dualcaster Mage
Ekundu Cyclops
Feldon of the Third Path
Flamekin Village
Flesh Carver
Freyalise, Llanowar's Fury
Ghoulcaller Gisa
Grave Sifter
Hallowed Spiritkeeper
Jazal Goldmane
Lifeblood Hydra
Magnetic Web
Malicious Affliction
Masterwork of Ingenuity
Merseine
Nahiri, the Lithomancer
Necromantic Selection
Ob Nixilis of the Black Oath
Overseer of the Damned
Raving Dead
Reef Worm
Scarred Puma
Scrap Mastery
Song of the Dryads
Spoils of Blood
Stitcher Geralf
Stormsurge Kraken
Teferi, Temporal Archmage
Thunderfoot Baloth
Titania, Protector of Argoth
Tyrant's Familiar
Unstable Obelisk
Viashino Bey
Wake the Dead
War's Toll
Warmonger Hellkite
Well of Ideas

Crown of Doom
Wolfcaller's Howl
Benevolent Offering
Intellectual Offering
Sylvan Offering
Fell the Mighty


------------
Known Issues
------------

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -